<?xml version="1.0"?>
<package format="2">

  <name>mrs_actionlib_interface</name>
  <version>1.0.0</version>
  <description>mrs_actionlib_interface</description>

  <maintainer email="hertdani@fel.cvut.cz">Daniel Hert</maintainer>
  <author email="hertdani@fel.cvut.cz">Daniel Hert</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <export>

    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
